# eddit

./: .buildconfig  Cargo.toml  Makefile  README.MD
data/: com.github.maze-n.eddit.appdata.xml  com.github.maze-n.eddit.desktop  com.github.maze-n.eddit.gschema.xml
data/styles/: eddit-dark.xml  eddit-light.xml
make/: post_install.py  pre_install.py
src/: main.rs  state.rs
src/components/: app.rs  content.rs  dialog.rs  file_operations.rs  header.rs  misc.rs  mod.rs  save.rs  searchbox.rs
