[package]
name = "eddit"
version = "0.1.0"
authors = ["maze-n <mmaz999@outlook.com>"]
edition = "2018"

[dependencies]
gdk = "0.6"
tiny-keccak = "1.4.0"
pango = "0.2.0"

[dependencies.sourceview]
features = ["v3_18"]
version = "0.2"

[dependencies.gtk]
features = ["v3_22"]
version = "0.2"

[dependencies.gio]
version = ""
features = ["v2_44"]